# lemma

./: .dockerignore  .gitignore  My People — a quiet personal CRM.html  README.md  install.sh
agentbox/: .dockerignore  Dockerfile  Dockerfile.runtime  Makefile  README.md  pyproject.toml
agentbox-client/: pyproject.toml
agentbox-client/agentbox_client/: __init__.py  client.py  errors.py  sessions.py  timeouts.py
agentbox-client/agentbox_client/apps/: function_executor.py
agentbox-client/openapi/: agentbox-manager.openapi.json  function-executor.openapi.json
agentbox-client/scripts/: bench.py  bench_lemma.py  diag_importtime.py  diag_lemma.py  generate.py
agentbox-client/tests/: test_client_auth_headers.py  test_function_executor_readiness.py
agentbox/agentbox/: __init__.py  apps.py  auth.py  config.py  function_executor.py  kubernetes.py  runtime_proxy.py  runtime_server.py  sandbox_ids.py  schemas.py  server.py  state.py  to_thread.py
agentbox/agentbox/api/: __init__.py  app.py  apps.py  deps.py  lifecycle.py  sandboxes.py  sessions.py
agentbox/agentbox/providers/: __init__.py  base.py  docker.py  podman.py
agentbox/scripts/: save-webpage.sh  start-browser.sh  start-runtime.sh  webpage-to-markdown.mjs
agentbox/tests/: test_app_proxy_timeout.py  test_auth.py  test_docker_provider.py  test_function_executor.py  test_kubernetes_provider.py  test_runtime_boundaries.py  test_state_store.py  test_to_thread.py
agentbox/tests/e2e/: conftest.py  test_apps_e2e.py  test_client_contract_e2e.py  test_function_executor_e2e.py  test_manager_lifecycle_e2e.py  test_runtime_sessions_e2e.py  test_runtime_tools_e2e.py
desktop/: .gitignore  Cargo.toml  README.md  entitlements.plist  krunkit-entitlements.plist  tauri.conf.json  tauri.dist.conf.json
desktop/capabilities/: main.json
desktop/icons/: icon.icns
desktop/scripts/: build-sidecar.sh  extract-concepts.mjs  stage-podman-runtime.mjs
desktop/src/: main.rs
desktop/ui/: concepts.gen.json  index.html
lemma-backend/: .gitignore  Dockerfile  Makefile  README.md  agent_tool_schemas.json  alembic.ini  conftest.py  docker-compose.observability.yml  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  standalone_app.py
lemma-backend/app/: app.py  auth_app.py  events.py  mcp_server.py  scheduler.py  standalone.py  version.py
lemma-backend/app/core/: config.py  cors.py  html_document.py  object_storage.py  openapi_extensions.py  runtime_config.py  security.py  test_html_document.py  test_html_response.py  test_runtime_config.py  test_utils.py
lemma-backend/app/core/api/: dependencies.py  exception_handlers.py  html_response.py  pagination.py  schemas.py
lemma-backend/app/core/authorization/: __init__.py  cache.py  context.py  current.py  delegation.py  dependencies.py  factory.py  grants.py  models.py  permissions.py  resource_actions.py  resource_names.py  service.py  sql_actions.py
lemma-backend/app/core/crypto/: __init__.py  cipher.py  envelope.py  factory.py  keys.py  ports.py  rotation.py  signer.py
lemma-backend/app/core/domain/: aggregate.py  entity.py  errors.py  events.py  job_queue.py  message_bus.py  repository.py  uow.py  validators.py
lemma-backend/app/core/email/: __init__.py  email_sender.py
lemma-backend/app/core/embeddings/: embeddings.py  factory.py  fireworks_embedder.py  local_embedder.py  token_counter.py
lemma-backend/app/core/file_editor/: file_editor.py  test_file_editor.py
lemma-backend/app/core/helpers/: humanize.py  identifiers.py  slug.py
lemma-backend/app/core/infrastructure/: admin.py
lemma-backend/app/core/log/: log.py
lemma-backend/app/core/observability/: telemetry.py
lemma-backend/app/core/ports/: widget_content.py
lemma-backend/app/core/pubsub/: publisher.py  subscriber.py
lemma-backend/installer/postgres-init/: README.md
lemma-backend/lemma-connectors/: README.md  pyproject.toml
lemma-backend/lemma-connectors/openapi_specs/: slack.json
lemma-backend/lemma-connectors/scripts/: generate_openapi_metadata.py  generate_resource_operations.py  generate_tool_types.py
lemma-backend/lemma-connectors/tests/: test_binary_results.py  test_gmail_execution.py  test_gmail_resources.py  test_google_calendar_resources.py  test_info_clients.py  test_jira_client.py
lemma-backend/manifests/slack/: manifest.json
lemma-backend/manifests/teams/: manifest.json
lemma-backend/migrations/: env.py  script.py.mako
lemma-backend/migrations/versions/: 0001_oss_baseline.py  0002_org_join_policy.py  0003_function_python_packages.py  0004_encrypt_webhook_secret.py  0005_uppercase_internal_enums.py  2026-06-24_baseline_schema_0001_baseline.py
lemma-backend/scripts/: backfill_legacy_membership_roles.py  decrypt_fernet_json.py  export_agent_tool_schemas.py  generate-certs.sh  import_composio_catalog.py  lemma_apps_config.json  migrate_desk_app_connector_db_values.py  migrate_desk_assets_to_app_prefix.py  package_teams_manifest.py  reencrypt_secrets.py  sample_local_agent_chat.py  setup_local_https.sh  upgrade_secret_encryption.py  workspace_run.py
(+3088 files in other folders)
