[project]
name = "lemma-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.11.9",
    "email-validator>=2.1.0",
    "structlog>=25.4.0",
    "pydantic-settings>=2.11.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.4.1",
    "aiosmtplib>=3.0.2",
    "obstore>=0.8.2",
    "streaq>=6.3.4",
    "jsonpath-ng>=1.6.0",
    "aiohttp>=3.13.0",
    "aiofiles>=25.1.0",
    "tiktoken>=0.12.0",
    "faststream[cli,redis]>=0.6.4",
    "jmespath>=1.0.1",
    "jsonschema>=4.26.0",
    "slack-sdk>=3.39.0",
    "redis>=6.4.0,<7",
    "pytz>=2025.2",
    "psycopg[binary,pool]>=3.3.2",
    "sqlglot>=25.0.0",
    "alembic>=1.18.1",
    "anyio>=4.12.0",
    "fastapi[standard]>=0.128.0",
    "scalar-fastapi>=1.6.1",
    "lemma-connectors",
    "composio>=0.11.0",
    "openinference-instrumentation-pydantic-ai>=0.1.12",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-aiohttp-client>=0.60b1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-redis>=0.60b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.60b1",
    "pydantic-deep>=0.2.20",
    "authlib>=1.6.6",
    "apscheduler>=3.11.2",
    "pydantic-ai-slim[anthropic,fastmcp,mcp,openai,retries]>=1.104.0",
    "websockets>=16.0",
    "uvicorn[standard]>=0.42.0",
    "supertokens-python==0.30.2",
    "greenlet>=3.3.2",
    "markdown>=3.8.2",
    "cryptography>=46.0.6",
    "fastembed>=0.7.4",
    "agentbox-client",
    "pypdfium2>=5.10.1",
]

[project.optional-dependencies]
# Cloud key backends for app/core/crypto. Optional so OSS/local stays lean; the
# imports are lazy (only loaded when secret_key_provider selects them).
gcp-kms = [
    "google-cloud-kms>=3.0.0",
    "google-cloud-secret-manager>=2.20.0",
]
# OS keychain backend for local dev (secret_key_provider=keychain).
keychain = [
    "keyring>=25.0.0",
]

[dependency-groups]
dev = [
    "kubernetes>=34.1.0",
    "nest-asyncio>=1.6.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.14.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# lemma-backend is the open-source library. lemma-cloud installs it (editable
# path locally, pinned version/hash for deploys) and composes extra modules.
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"standalone_app.py" = "standalone_app.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
lemma-connectors = { path = "lemma-connectors", editable = true }
agentbox-client = { path = "../agentbox-client", editable = true }
