[project]
name = "lemma-connectors"
version = "0.1.0"
description = "OpenAPI-native native connector packages for Lemma"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "httpx>=0.28.1",
    "json-schema-to-pydantic>=0.4.11",
    "pydantic>=2.11.9",
    "python-dateutil>=2.9.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.56.1",
    "openapi-python-client>=0.28.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lemma_connectors"]
